# laszland

./: .gitignore  .gitognore
week-01/day-1/exercises/: reflexion.txt
week-01/day-2/: gitignore.txt
week-01/day-2/css/: file-2.txt
week-01/day-2/exercises/: reflexion.txt
week-01/day-2/images/: file-1.txt
week-01/day-3/INPUT/: CMakeLists.txt  main.cpp
week-01/day-3/TYPES/: CMakeLists.txt  main.cpp
week-01/day-3/VARIABLES/: CMakeLists.txt  main.cpp
week-01/day-3/WRITE/: main.cpp
week-01/day-4/CONDITIONALS/: CMakeLists.txt  main.cpp
week-01/day-4/LOOPS/: CMakeLists.txt  main.cpp
week-01/day-5/ARRAYS/: CMakeLists.txt  main.cpp
week-01/home-practice/: CMakeLists.txt  main.cpp
week-02/day-1/: CMakeLists.txt
week-02/day-1/PERSONAL FINANCE/: CMakeLists.txt  main.cpp
week-02/day-1/STRING/: CMakeLists.txt  main.cpp
week-02/day-1/TELEPHONE NUMBER/: CMakeLists.txt  main.cpp
week-02/day-1/VECTOR/: CMakeLists.txt  main.cpp
week-02/day-2/: CMakeLists.txt  main.cpp
week-02/day-2/ARRAYS AND POINTER/: CMakeLists.txt  main.cpp
week-02/day-3/drawing_setup/: CMakeLists.txt  centeredBoxes.cpp  chessBoard.cpp  coloredBox.cpp  diagonals.cpp  draw.cpp  draw.h  envelopeStar.cpp  fourRectangles.cpp  funktionToCenter.cpp  goToCenter.cpp  horizontalLines.cpp  linePlay.cpp  positionSquare.cpp  purple3d.cpp  purpleSteps.cpp  rainbowBoxes.cpp  squareCenter.cpp  triangle.cpp
week-03/: rescourceFile.txt
week-03/day-2/: main.cpp
week-10/Darts/: CMakeLists.txt  game.cpp  game.h  main.cpp  player.cpp  player.h
week-10/PrintingTokens/: CMakeLists.txt  main.c
(+244 files in other folders)
